--- a/public/styles/scss/_variables.scss
+++ b/public/styles/scss/_variables.scss
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Noticia+Text:wght@400;700&display=swap');
 
 
-/**
-* Couleurs
-*/
+// ====== ===================================== //
+// ====== COULEURS								//
+// ====== ===================================== //
+
 $main-color: #BFA678;
 $secondary-color: #737373;
 $main-bg-color: #FFFAD5;
@@ -15,29 +16,29 @@ $white: #F2F2F2;
 $main-hg-color: #BD4932;
 $secondary-hg-color: #105B63;
 
-/**
-* Typographie
-*/
+
+// ====== ===================================== //
+// ====== TYPOGRAPHIE							//
+// ====== ===================================== //
+
 $font-family: 'Noticia Text', serif;
 $font-default-size: 16px;
 
 
-/**
-* Responsive
-*/
+// ====== ===================================== //
+// ====== RESPONSIVE							//
+// ====== ===================================== //
+
 $med-screen: 48rem;
 $lg-screen: 62rem;
 
 
-/**
-* Sizing
-*/
+// ====== ===================================== //
+// ====== SIZING								//
+// ====== ===================================== //
+
 $main-nav-height: 75px;
 $main-nav-height-screen: $main-nav-height + 25px;
 
-
-/**
-* Margin and Padding
-*/
 $sizing: 20px;
 
