--- a/public/styles/scss/_variables.scss
+++ b/public/styles/scss/_variables.scss
@@ -12,6 +12,7 @@ $secondary-bg-color: #B38963;
 $dark: #0D0D0D;
 $white: #F2F2F2;
 
+$light-pale-green: #e6e7d9;
 
 $main-hg-color: #BD4932;
 $secondary-hg-color: #105B63;
