--- a/public/styles/scss/main-nav.scss
+++ b/public/styles/scss/main-nav.scss
@@ -15,10 +15,70 @@
 	}
 }
 
-#main-logo,
 #main-menu {
-	padding: $sizing;
+	display: none;
+	height: 100%;
+
+	@media screen and (min-width: $med-screen) {
+		display: flex;
+	}
 }
+
+
+// ====== ===================================== //
+// ====== ANIMATION LIENS MENU					//
+// ====== ===================================== //
+
+a, i {
+	transition: transform 180ms ease-in;
+}
+
+li, .menu-link-home {
+	width: 110px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	transition: background-color 120ms ease-in,
+		border 120ms ease-in;
+	height: 100%;
+	border: 2px solid transparent;
+
+	&:hover {
+		background-color: darken($white, 5%);
+		border-color: darken($white, 10%);
+		cursor: pointer;
+	}
+
+	&:hover a {
+		transform: scale(1.05);
+	}
+
+	&:hover i {
+		transform: scale(1.12);
+	}
+}
+
+#admin-link {
+	background-color: $light-pale-green;
+
+	&:hover {
+		background-color: darken($light-pale-green, 5%);
+		border-color: darken($light-pale-green, 10%);
+	}
+}
+
+.menu-link-home {
+	width: auto;
+
+	a {
+		padding: $sizing;
+	}
+}
+
+
+// ====== ===================================== //
+// ====== MENU RESPONSIVE						//
+// ====== ===================================== //
 
 #toggle-menu {
 	display: block;
@@ -28,16 +88,3 @@
 		display: none;
 	}
 }
-
-#main-menu {
-	display: none;
-	
-	@media screen and (min-width: $med-screen) {
-		display: flex;
-		
-		& li {
-			padding: $sizing / 2;
-		}
-	}
-}
-
