--- a/public/styles/scss/main.scss
+++ b/public/styles/scss/main.scss
@@ -7,6 +7,10 @@
 // ====== RESET									//
 // ====== ===================================== //
 
+* {
+	box-sizing: border-box;
+}
+
 body {
 	width: 100%;
 	margin: 0 auto;
