--- a/public/styles/scss/_variables.scss
+++ b/public/styles/scss/_variables.scss
@@ -40,6 +40,7 @@ $lg-screen: 62rem;
 
 $main-nav-height: 75px;
 $main-nav-height-screen: $main-nav-height + 25px;
+$nav-link-w: 110px;
 
 $sizing: 20px;
 
