--- a/public/styles/scss/main-nav.scss
+++ b/public/styles/scss/main-nav.scss
@@ -1,11 +1,4 @@
 #main-nav {
-	position: fixed;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	left: 0;
-	right: 0;
-	top: 0;
 	height: $main-nav-height;
 	background: $white;
 	width: 100%;
@@ -33,31 +26,6 @@ a, i {
 	transition: transform 180ms ease-in;
 }
 
-li, .menu-link-home {
-	width: 110px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	transition: background-color 120ms ease-in,
-		border 120ms ease-in;
-	height: 100%;
-	border: 2px solid transparent;
-
-	&:hover {
-		background-color: darken($white, 5%);
-		border-color: darken($white, 10%);
-		cursor: pointer;
-	}
-
-	&:hover a {
-		transform: scale(1.05);
-	}
-
-	&:hover i {
-		transform: scale(1.12);
-	}
-}
-
 #admin-link {
 	background-color: $light-pale-green;
 
@@ -67,7 +35,7 @@ li, .menu-link-home {
 	}
 }
 
-.menu-link-home {
+.nav-btn.menu-link-home {
 	width: auto;
 
 	a {
