--- a/public/styles/scss/main.scss
+++ b/public/styles/scss/main.scss
@@ -1,7 +1,4 @@
 @import '_variables.scss';
-@import 'main-nav.scss';
-@import 'home.scss';
-
 
 // ====== ===================================== //
 // ====== RESET									//
@@ -66,8 +63,28 @@ ul {
 
 
 // ====== ===================================== //
-// ====== DESIGN PAGES							//
+// ====== ELEMENTS COMPORTEMENT					//
 // ====== ===================================== //
+
+.navigation-bar {
+	position: fixed;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	left: 0;
+	right: 0;
+	top: 0;
+
+	&.navigation-col {
+		justify-content: space-between;
+		flex-direction: column;
+		left: 0;
+		bottom: 0;
+		right: unset;
+		height: 100vh;
+	}
+}
+
 
 footer {
 	margin: 0;
@@ -99,3 +116,41 @@ button {
 	color: $white;
 }
 
+
+// ====== ===================================== //
+// ====== BUTTONS NAVIGATION					//
+// ====== ===================================== //
+
+a, i {
+	transition: transform 180ms ease-in;
+	text-align: center;
+}
+
+.nav-btn {
+	width: $nav-link-w;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	transition: background-color 120ms ease-in,
+		border 120ms ease-in;
+	height: 100%;
+	border: 2px solid transparent;
+
+	&:hover {
+		background-color: darken($white, 5%);
+		border-color: darken($white, 10%);
+		cursor: pointer;
+	}
+
+	&:hover a {
+		transform: scale(1.05);
+	}
+
+	&:hover i {
+		transform: scale(1.12);
+	}
+}
+
+@import 'main-nav.scss';
+@import 'admin.scss';
+@import 'home.scss';
