--- a/public/styles/css/main.css
+++ b/public/styles/css/main.css
@@ -29,7 +29,8 @@ h1 {
   font-size: 4rem; }
   @media screen and (min-width: 48rem) {
     h1 {
-      font-size: 6rem; } }
+      font-size: 6rem;
+      margin: 0 0 20px; } }
 
 h2 {
   color: #BFA678;
@@ -144,12 +145,13 @@ a, i {
   #nav-admin .nav-btn:hover a {
     color: #0D0D0D; }
 
-h1, #admin-pannel {
-  width: 100%; }
+#admin-pannel {
+  width: 100%;
+  padding: 20px; }
   @media screen and (min-width: 48rem) {
-    h1, #admin-pannel {
-      width: 75%;
-      margin-left: 110px; } }
+    #admin-pannel {
+      margin-left: 110px;
+      width: calc(100% - 110px); } }
 
 #header {
   height: 350px;
